--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@community/event-dispatcher",
-  "version": "1.0.0",
+  "name": "event-dispatcher",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
