--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
     "compilerOptions": {
-        "target": "ES2018",
-        "module": "commonjs",
-        "declaration": true,
-        "outDir": "./lib",
-        "strict": true
+        "target": "esnext",                          
+        "module": "commonjs",                    
+        "lib": ["esnext"],                     
+        "allowJs": true,
+        "outDir": "lib",                          
+        "rootDir": "src",
+        "strict": true,         
+        "noImplicitAny": false,
+        "esModuleInterop": true,
+        "resolveJsonModule": true
     },
     "include": ["src"],
-    "exclude": ["node_modules", "tests", "examples"]
+    "exclude": ["node_modules", "tests", ]
 }
