--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node": ">=12.18.0"
   },
   "scripts": {
+    "build": "rollup -c",
     "lint": "standard src/*.js --fix",
-    "prepare": "npm run lint"
+    "prepare": "npm run lint && num run build",
+    "dev": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,12 @@
     "amqplib": "^0.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "rimraf": "^3.0.2",
+    "rollup": "^2.29.0",
+    "rollup-plugin-terser": "^7.0.2",
     "standard": "^14.3.4"
   },
   "files": [
