--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpc-dispatcher",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A simple event dispatcher which implements RPC pattern over RabbitMQ. Allows to register subscribers and dispatch events across the microservices.",
   "main": "lib/index.js",
   "engines": {
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "rollup -c",
     "lint": "standard src/*.js --fix",
-    "prepare": "npm run lint && num run build",
+    "prepare": "npm run lint && npm run build",
     "dev": "rollup -c -w"
   },
   "repository": {
@@ -29,8 +29,6 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.29.0",
     "rollup-plugin-terser": "^7.0.2",
