--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpc-dispatcher",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A simple event dispatcher which implements RPC pattern over RabbitMQ. Allows to register subscribers and dispatch events across the microservices.",
   "main": "lib/index.js",
   "engines": {
@@ -10,7 +10,8 @@
     "build": "rollup -c",
     "lint": "standard src/*.js --fix",
     "prepare": "npm run lint && npm run build",
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
