--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@macotsuu/dispatcher",
+	"name": "@stackbytes/dispatcher",
 	"version": "1.0.0",
 	"description": "A package for creating communication between microservices based on RabbitMQ.",
 	"main": "src/index.js",
