--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@stackbytes/dispatcher",
+	"name": "@nulldark/dispatcher",
 	"version": "1.2.0",
 	"description": "A package for creating communication between microservices based on RabbitMQ.",
 	"main": "src/index.js",
@@ -13,7 +13,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/macotsuu/dispatcher.git"
+		"url": "git+https://github.com/nulldark/dispatcher.git"
 	},
 	"keywords": [
 		"amqp",
@@ -21,7 +21,7 @@
 		"rpc",
 		"dispatcher"
 	],
-	"author": "macotsuu",
+	"author": "nulldark",
 	"license": "MIT",
 	"dependencies": {
 		"amqplib": "^0.10.3"
