--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@nulldark/dispatcher",
-	"version": "1.2.0",
+	"name": "@nulxrd/dispatcher",
+	"version": "2.0.0",
 	"description": "A package for creating communication between microservices based on RabbitMQ.",
 	"main": "src/index.js",
 	"engines": {
@@ -13,7 +13,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/nulldark/dispatcher.git"
+		"url": "git+https://github.com/nulxrd/dispatcher.git"
 	},
 	"keywords": [
 		"amqp",
